--- a/back/package.json
+++ b/back/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/yup": "^0.32.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -16,7 +17,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
